# longform

./: .env.example  .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
apps/api/: README.md  pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/app/application/: provider_runtime.py  services.py
apps/api/app/application/schemas/: assets.py  common.py  issues.py  market.py  platform.py  scripts.py  stats.py
apps/api/app/core/: config.py  database.py
apps/api/app/domain/: __init__.py  enums.py  models.py  provider_interfaces.py
apps/api/app/domain/services/: __init__.py  data_engines.py  evidence_validation.py  image_prompting.py  issue_ranking.py  script_prompting.py  video_prompting.py
apps/api/app/infrastructure/db/: bootstrap.py  models.py  repositories.py
apps/api/app/infrastructure/providers/: adapters.py  claude_messages.py  generative_ai.py  kling_video.py  sample_data.py
apps/api/app/infrastructure/queue/: __init__.py  celery_app.py  tasks.py
apps/api/app/infrastructure/storage/: __init__.py  factory.py  local.py  s3.py  types.py
apps/api/app/presentation/api/: dependencies.py  errors.py  router.py
apps/api/tests/: test_ai_provider_selection.py  test_evidence_validation.py  test_image_prompting.py  test_image_service.py  test_issue_ranking.py  test_issue_service.py  test_kling_video_adapter.py  test_news_adapter.py  test_script_prompting.py  test_script_service.py  test_service_bundle_smoke.py  test_snapshot_service.py  test_statistics_market_engine.py  test_video_prompting.py  test_video_service.py
(+81 files in other folders)
