[project]
name = "fact-based-ai-content-studio-api"
version = "0.1.0"
description = "FastAPI backend for Fact-based AI Content Studio"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "celery>=5.4.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "pydantic-settings>=2.6.0",
  "psycopg[binary]>=3.2.0",
  "redis>=5.2.0",
  "sqlalchemy>=2.0.36",
  "uvicorn[standard]>=0.32.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.8.0"
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
